style: fixes layout bugs.

--- a/src/styles/views/mail.scss
+++ b/src/styles/views/mail.scss
@@ -82,10 +82,21 @@
     .meta-input {
       @extend %flex-row;
       @extend %flex-align-center;
+      @extend %flex-shrink-0;
       border-bottom: 1px solid $divider-dark;
       height: 48px;
       padding-left: $padding-default;
       padding-right: $padding-small;
+
+      .rt-input-input {
+        margin: 0;
+        padding: 0;
+
+        input {
+          border-width: 0;
+          padding: 0;
+        }
+      }
     }
   }
 
